completing motoman sys functions